Update base64 library.